# Sentinel-Driver-Monitor

./: .gitignore  ReadMe.md
cloud_dashboard/: app.py
cloud_dashboard/templates/: index.html
edge_device/: CMakeLists.txt
edge_device/include/: AlertManager.h  Config.h  CrashDetector.h  InferenceEngine.h
edge_device/src/: AlertManager.cpp  CrashDetector.cpp  InferenceEngine.cpp  main.cpp
scripts/: collect_data.py  setup.sh  train_model.py
